add UserDetailServiceImplTest and JwtUtilsTests, add all their tests